--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,134 @@
-.App {
+
+* {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  background-color: #e3e6e7;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu {
+  height: 50px;
+  background-color: #050505;
+  margin-top: 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  background-color: #050505;
+  padding: 0.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul li {
+  margin-top: 5px;
+  margin-left: 20px;
+  list-style-type: none;
+  display: inline-block;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0);
+  text-transform: uppercase;
+}
+
+h1, h2, h3, h4, h5, b, p {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.product-list {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.product-card {
+  width: 250px;
+  height: inherit;
+  border-radius: 5px;
+  background-color: #ffffff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 0px;
+}
+.product-card:hover {
+  box-shadow: 5px 5px 5px rgb(168, 168, 168);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.product-card-image {
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+  height: 250px;
+}
+
+.button-orange {
+  color: #ffffff;
+  background-color: rgba(240, 98, 16, 0.8);
+  border-color: rgba(0, 0, 0, 0);
+  width: 90%;
+  height: 35px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.button-orange:hover {
+  background-color: rgba(207, 82, 9, 0.8);
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+  * {
+    font-size: 16px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .product-list {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .product-card {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .product-card-image {
+    margin: auto;
+    height: 45vh;
+  }
+
+  .button-orange {
+    color: #ffffff;
+    background-color: rgba(240, 98, 16, 0.8);
+    border-color: rgba(0, 0, 0, 0);
+    width: 90%;
+    height: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .menu {
+    height: inherit;
+    background-color: #050505;
+  }
+
+  ul {
+    background-color: rgba(0, 0, 0, 0);
+    padding: 0rem;
+  }
+  
+  ul li {
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 10px;
+    border-top: 1px solid #ffffff;
+    width: 100%;
+    height: 30px;
+    list-style-type: none;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0);
   }
 }
