--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,7 +90,7 @@ form {
   margin-top: 20px;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=number] {
   background-color: inherit;
   height: 20px;
   border: hidden;
@@ -111,11 +111,7 @@ input[type=text], input[type=password] {
   border: hidden;
 }
 
-input[type=text]:focus {
-  outline: none;
-}
-
-input[type=password]:focus {
+input[type=text]:focus, input[type=password]:focus, input[type=number]:focus {
   outline: none;
 }
 
