--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,7 +65,7 @@ form, .success-box-style {
 }
 
 .dashboard-form {
-  width: 50%;
+  width: 40%;
 }
 
 .form-group {
@@ -99,17 +99,13 @@ form, .success-box-style {
   background-color: #ffffff;
   padding: 10px;
   border-radius: 5px;
-  max-width: 50%;
+  max-width: 40%;
 }
 
 .dashboard-nav {
   display: flex;
   flex-flow: row wrap;
   flex-direction: row;
-  padding: 10px;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
   background: inherit;
 }
 
@@ -149,6 +145,32 @@ input[data-autocompleted] {
 
 .icon-style {
   background: transparent;
+}
+
+#store-details-left {
+  float: left;
+}
+
+#store-details-right {
+  float: right;
+}
+
+.store-card {
+  background-color: #ffffff;
+  margin-top: 10px;
+  min-width: 40vw;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.store-details-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.store-card-details {
+  width: 50%;
+  margin: 10px;
 }
 
 .spinner {
@@ -451,5 +473,19 @@ a {
     list-style-type: none;
     display: inline-block;
     background-color: rgba(0, 0, 0, 0);
+  }
+
+  .store-card {
+    min-width: 88vw;
+  }
+
+  .store-details-container {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+  }
+
+  .store-card-details {
+    min-width: 100%;
   }
 }
