--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,24 +34,47 @@ h1, h2, h3, h4, h5, b, p {
   background-color: rgba(0, 0, 0, 0);
 }
 
-table, td, th {
-  border: 1px solid;
+th {
+  border: 1px solid #fff;
+  background-color: inherit;
+  padding: 0.5em;
+}
+
+td {
+  border: 1px solid #fff;
+  background-color: #fff;
+  padding: 0.5em;
 }
 
 table {
   border-collapse: collapse;
-  width: 90%;
+  width: 100%;
 }
 
 span {
   background-color: inherit;
 }
 
+.header-text {
+  background-color: inherit;
+  font-size: 28px;
+  font-weight: 500;
+  color: #000;
+  margin: 10px auto 10px auto;
+}
+
+.medium-text {
+  background-color: inherit;
+  font-size: 24px;
+  font-weight: 500;
+  color: #000;
+  margin: 10px auto 10px auto;
+}
+
 label {
   background-color: #ffffff;
   color: #555;
   font-size: 18px;
-  float: left;
   margin: 10px;
 }
 
@@ -143,8 +166,20 @@ input[data-autocompleted] {
     background-color: transparent !important;
 }
 
-.icon-style {
+.icon-style, .clickable-icon-style {
   background: transparent;
+}
+
+.clickable-icon-style:hover {
+  cursor: pointer;
+}
+
+.spec-input-div {
+  max-width: 30%;
+}
+
+.feature-input-div {
+  max-width: 100%;
 }
 
 #store-details-left {
@@ -165,12 +200,15 @@ input[data-autocompleted] {
 
 .store-details-container {
   display: flex;
+  flex-flow: row wrap;
   flex-direction: row;
+  justify-content: center;
 }
 
 .store-card-details {
-  width: 50%;
-  margin: 10px;
+  width: 48%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .spinner {
@@ -198,12 +236,26 @@ footer {
   height: 30px;
   color: #ffffff;
   padding-top: 5px;
+  margin-top: 10px;
 }
 
 .image-thumbnail {
   width: 100px;
   height: 100px;
 }
+
+.image-thumbnail-placeholder {
+  background-color: inherit;
+  color: #2596be;
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+}
+
+.image-thumbnail-placeholder:hover {
+  cursor: pointer;
+}
+
 
 div {
   background-color: inherit;
@@ -229,6 +281,8 @@ div {
 
 .product-content {
   background-color: inherit;
+  display: flex;
+  flex-direction: column;
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 10px;
@@ -330,7 +384,7 @@ a {
   background-color: rgba(240, 98, 16, 0.8);
   border-color: rgba(0, 0, 0, 0);
   border-radius: 5px;
-  width: 90%;
+  width: 100%;
   height: 45px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -358,6 +412,23 @@ a {
 
 .button-green:hover {
   background-color:rgba(2, 150, 39, 0.8);
+  cursor: pointer;
+}
+
+.button-small-blue {
+  color: #ffffff;
+  background-color: rgba(16, 121, 240, 0.8);
+  border-color: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+  min-width: 100px;
+  height: 35px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.button-small-blue:hover {
   cursor: pointer;
 }
 
@@ -431,7 +502,7 @@ a {
     color: #ffffff;
     background-color: rgba(240, 98, 16, 0.8);
     border-color: rgba(0, 0, 0, 0);
-    width: 90%;
+    width: 100%;
     height: 40px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -475,8 +546,12 @@ a {
     background-color: rgba(0, 0, 0, 0);
   }
 
+  .spec-input-div {
+    max-width: 100%
+  }
+
   .store-card {
-    min-width: 88vw;
+    max-width: 90%;
   }
 
   .store-details-container {
@@ -487,5 +562,6 @@ a {
 
   .store-card-details {
     min-width: 100%;
+    margin: auto;
   }
 }
