I just conclude the update product form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -193,7 +193,7 @@ input[data-autocompleted] {
 .store-card {
   background-color: #ffffff;
   margin-top: 10px;
-  min-width: 40vw;
+  max-width: 45vw;
   padding: 10px;
   border-radius: 5px;
 }
