--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,7 +80,8 @@ label {
 
 form, .success-box-style {
   background-color: #ffffff;
-  width: 25%;
+  max-width: inherit;
+  min-width: 25%;
   min-height: 50%;
   padding: 10px;
   margin: 20px auto 20px auto;
