--- a/client/src/App.css
+++ b/client/src/App.css
@@ -175,6 +175,20 @@ input[data-autocompleted] {
   cursor: pointer;
 }
 
+.cart {
+  min-width: 45%;
+  max-width: 50%;
+  height: inherit;
+  background-color: #ffffff;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.cart-alert {
+  width: 70%;
+}
+
 .spec-input-div {
   max-width: 30%;
 }
@@ -565,4 +579,13 @@ a {
     min-width: 100%;
     margin: auto;
   }
+
+  .cart {
+    max-width: 90%;
+  }
+
+  .cart-alert {
+    width: 100%;
+  }
+  
 }
