--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,8 +80,7 @@ label {
 
 form, .success-box-style {
   background-color: #ffffff;
-  max-width: inherit;
-  min-width: 25%;
+  width: 25%;
   min-height: 50%;
   padding: 10px;
   margin: 20px auto 20px auto;
@@ -131,6 +130,13 @@ form, .success-box-style {
   flex-flow: row wrap;
   flex-direction: row;
   background: inherit;
+}
+
+.invoice {
+  width: 40%;
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 input[type=text], input[type=password], input[type=number] {
@@ -187,6 +193,11 @@ input[data-autocompleted] {
 
 .cart-alert {
   width: 70%;
+}
+
+.cart-form {
+  width: 90%;
+  margin: auto
 }
 
 .spec-input-div {
@@ -491,6 +502,10 @@ a {
   
 
   .dashboard-form {
+    width: 90%;
+  }
+
+  .invoice {
     width: 90%;
   }
 
