--- a/client/src/App.css
+++ b/client/src/App.css
@@ -122,7 +122,7 @@ form, .success-box-style {
   background-color: #ffffff;
   padding: 10px;
   border-radius: 5px;
-  max-width: 40%;
+  width: 40%;
 }
 
 .dashboard-nav {
