--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,7 +92,7 @@ form, .success-box-style {
 }
 
 .form-group {
-  margin: 5px auto 0px auto;
+  margin: 0px auto 10px auto;
 }
 
 .form-alert {
@@ -107,14 +107,17 @@ form, .success-box-style {
 }
 
 .input-group {
+  display: flexbox;
+  flex-direction: row;
   background-color: #e3e6e7;
   height: inherit;
   padding: 10px 5px;
   border-radius: 5px;
   border: 2px solid #ffffff;
   border-bottom-style: groove;
-  width: inherit;
-  margin-top: 20px;
+  width: 95%;
+  margin-top: 30px;
+  text-align: left;
 }
 
 .dashboard-container {
@@ -150,8 +153,9 @@ input[type=text], input[type=password], input[type=number] {
   background-color: inherit;
   height: 20px;
   border: hidden;
-  width: 90%;
+  width: 80%;
   text-align: left;
+  margin-left: 0px;
 }
 
 .PhoneInputInput {
@@ -189,8 +193,7 @@ input[data-autocompleted] {
 }
 
 .cart {
-  min-width: 45%;
-  max-width: 50%;
+  width: 45%;
   height: inherit;
   background-color: #ffffff;
   margin-top: 10px;
@@ -213,6 +216,10 @@ input[data-autocompleted] {
 
 .feature-input-div {
   max-width: 100%;
+}
+
+.store-container {
+  width: 45%;
 }
 
 #store-details-left {
@@ -324,8 +331,14 @@ div {
 }
 
 .product-image {
-  height: 350px;
-  width: 350px;
+  height: auto;
+  width: 100%;
+}
+
+.product-image-container {
+  width: 30%;
+  height: 30%;
+  padding: 10px;
 }
 
 .remove-link-style {
@@ -522,7 +535,7 @@ a {
   }
 
   .dashboard-container {
-    max-width: 90%;
+    width: 90%;
   }
   
 
@@ -555,6 +568,11 @@ a {
   .product-card-image {
     margin: auto;
     height: 28vh;
+  }
+
+  .product-image-container {
+    width: 90%;
+    height: 90%;
   }
 
   .button-orange {
@@ -609,6 +627,11 @@ a {
     max-width: 100%
   }
 
+  .store-container {
+    width: 100%;
+  }
+  
+
   .store-card {
     max-width: 90%;
   }
@@ -625,7 +648,7 @@ a {
   }
 
   .cart {
-    max-width: 90%;
+    width: 90%;
   }
 
   .cart-alert {
