--- a/client/src/App.css
+++ b/client/src/App.css
@@ -193,10 +193,10 @@ input[data-autocompleted] {
 }
 
 .cart {
-  width: 45%;
+  width: 90%;
   height: inherit;
   background-color: #ffffff;
-  margin-top: 10px;
+  margin: 10px auto 10px auto;
   padding: 10px;
   border-radius: 5px;
 }
